2001-12-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* configure.in: Set MAX_TAPE_BLOCK_KB on linux.

2001-12-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by Blaz Zupan <blaz@amis.net>

	* changer-src/chg-zd-mtx.sh.in: typo.

2001-12-20 Thomas Hepper <th@ant.han.de>
	* changer-src/scsi-changer-driver.c: Return error if the find_empty returns an error
	  In function LogSense try to reset the error counter. Fixed wrong pDev struct pointer in
	  TapeStatus. Must be INDEX_TAPECTL and not INDEX_TAPE at the start of the function

2001-12-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/selfcheck.c (check_access): New function (old check_file 
	  function).
	* client-src/selfcheck.c (check_file): Check that the filename is a 
	  file.
	* client-src/selfcheck.c (check_dir): Check that dirname is a directory.

2001-12-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by Henning Schmiedehausen <henning@forge.intermeta.de>

	* common-src/file.c (safe_cd): Create the AMANDA_DBGDIR and 
	  AMANDA_TMPDIR directory.

2001-12-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* docs/Makefile.am (pkgdata_DATA): Include RAIT and VTAPE-API.

2001-12-12  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amverify.sh.in: Check that @AMANDA_TMPDIR@ exist.
	* server-src/amrmtape.sh.in: Ditto.

2001-12-11  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* changer-src/Makefile.am: fix setting of libexec_PROGRAMS.

2001-12-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: Work with amflush log.

2001-12-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driver.c (nodump): new argument, Don't start the dumpers
	  if set.
	* server-src/holding.c (get_flush): chdir to original cwd.
	* server-src/reporter.c: accept driver and amflush line in log.
	* server-src/amflush.c: exec driver to do the flushing.
