@@ -1134,6 +1134,7 @@ int SCSI_ExecuteCommand(int DeviceFD,
                         char *RequestSense,
                         int RequestSenseLength);
 
+int Tape_Ioctl( int DeviceFD, int command);
 void ChangerStatus(char * option, char * labelfile, int HasBarCode, char *changer_file, char *changer_dev, char *tape_device);
 
 int SCSI_Inquiry(int, SCSIInquiry_T *, unsigned char);
@@ -1142,6 +1143,8 @@ int DecodeSCSI(CDB_T CDB, char *string);
 
 int RequestSense P((int fd, ExtendedRequestSense_T *s, int ClearErrorCounters));
 int DecodeExtSense P((ExtendedRequestSense_T *sense, char *pstring, FILE *out));
+
+void ChgExit(char *, char *, int);
 
 void ChangerReplay(char *option);
 void ChangerStatus(char * option, char * labelfile, int HasBarCode, char *changer_file, char *changer_dev, char *tape_device);
